--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
@@ -1,12 +1,21 @@
 <div class="form-group position-relative">
-    <label for="directoryPath">Directory Path</label>
-    <input id="directoryPath" class="form-control dynamic-variable-addon" type="text" [(ngModel)]="currNode.options.directoryPath">
-    <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.directoryPath"></odp-node-data-selector>
+    <label for="directoryPath" class="font-14 fw-400 text-dark d-flex align-items-center justify-content-between">
+        Directory Path
+        <span class="dsi dsi-settings text-primary hover"
+            (click)="toggle['directoryPath']=!toggle['directoryPath']"></span>
+    </label>
+    <!-- <input id="directoryPath" class="form-control dynamic-variable-addon" type="text" [(ngModel)]="currNode.options.directoryPath"> -->
+    <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['directoryPath']" [nodeList]="nodeList"
+        [(value)]="currNode.options.directoryPath"></odp-node-data-selector>
 </div>
 <div class="form-group position-relative">
-    <label for="fileName">File Name</label>
-    <input id="fileName" class="form-control dynamic-variable-addon" type="text" [(ngModel)]="currNode.options.fileName">
-    <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.fileName"></odp-node-data-selector>
+    <label for="fileName" class="font-14 fw-400 text-dark d-flex align-items-center justify-content-between">
+        File Name
+        <span class="dsi dsi-settings text-primary hover" (click)="toggle['fileName']=!toggle['fileName']"></span>
+    </label>
+    <!-- <input id="fileName" class="form-control dynamic-variable-addon" type="text" [(ngModel)]="currNode.options.fileName"> -->
+    <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['fileName']" [nodeList]="nodeList"
+        [(value)]="currNode.options.fileName"></odp-node-data-selector>
 </div>
 <div class="d-flex flex-column">
     <!-- <div class="form-group d-flex align-items-center">
