--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -110,10 +110,13 @@
     <!-- <hr> -->
     <ng-container *ngIf="currNode?.type=='API' && !isInputNode">
         <div class="form-group position-relative">
-            <label class="font-14 fw-400 text-dark" for="nodeUrl">URL</label>
+            <label class="font-14 fw-400 text-dark d-flex align-items-center justify-content-between" for="nodeUrl">
+                URL
+                <span class="dsi dsi-settings text-primary hover" (click)="toggle['url']=!toggle['url']"></span>
+            </label>
             <!-- <textarea id="nodeUrl" class="form-control dynamic-variable-addon" cols="30" rows="4"
                 [(ngModel)]="currNode.options.url"></textarea> -->
-            <odp-node-data-selector [nodeList]="nodeList" [(value)]="currNode.options.url" [textarea]="true">
+            <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['url']" [nodeList]="nodeList" [(value)]="currNode.options.url" [textarea]="true">
             </odp-node-data-selector>
         </div>
         <div class="form-group">
@@ -143,7 +146,7 @@
             <label class="font-14 fw-400 text-dark" for="nodeBody">Body</label>
             <textarea id="nodeBody" class="form-control dynamic-variable-addon" cols="30" rows="4"
                 [(ngModel)]="currNode.options.body"></textarea>
-            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.body">
+            <odp-node-data-selector [nodeList]="nodeList" [(value)]="currNode.options.body">
             </odp-node-data-selector>
         </div> -->
         <div class="form-group position-relative">
@@ -189,10 +192,13 @@
     </ng-container>
     <ng-container *ngIf="currNode.type=='UNWIND'">
         <div class="form-group position-relative">
-            <label class="font-14 fw-400 text-dark" for="nodeUnWind">Change Root Path</label>
-            <input id="nodeUnWind" type="text" class="form-control dynamic-variable-addon"
-                [(ngModel)]="currNode.options.unwindPath" (ngModelChange)="changesDone.emit()">
-            <odp-node-data-selector [edit]="edit" class="node-data-selector" [nodeList]="nodeList"
+            <label class="font-14 fw-400 text-dark d-flex align-items-center justify-content-between" for="nodeUnWind">
+                Change Root Path
+                <span class="dsi dsi-settings text-primary hover" (click)="toggle['changeRoot']=!toggle['changeRoot']"></span>
+            </label>
+            <!-- <input id="nodeUnWind" type="text" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.unwindPath" (ngModelChange)="changesDone.emit()"> -->
+            <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['changeRoot']" [nodeList]="nodeList"
                 [(value)]="currNode.options.unwindPath">
             </odp-node-data-selector>
         </div>
@@ -245,10 +251,13 @@
     </ng-container>
     <ng-container *ngIf="currNode?.type=='RESPONSE'">
         <div class="form-group position-relative">
-            <label class="font-14 fw-400 text-dark" for="nodeStatusCode">Status Code</label>
-            <input id="nodeStatusCode" type="text" class="form-control dynamic-variable-addon"
-                [(ngModel)]="currNode.options.statusCode" (ngModelChange)="changesDone.emit()">
-            <odp-node-data-selector class="node-data-selector" [edit]="edit" [nodeList]="nodeList"
+            <label class="font-14 fw-400 text-dark d-flex align-items-center justify-content-between" for="nodeStatusCode">
+                Status Code
+                <span class="dsi dsi-settings text-primary hover" (click)="toggle['statusCode']=!toggle['statusCode']"></span>
+            </label>
+            <!-- <input id="nodeStatusCode" type="text" class="form-control dynamic-variable-addon"
+                [(ngModel)]="currNode.options.statusCode" (ngModelChange)="changesDone.emit()"> -->
+            <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['statusCode']" [nodeList]="nodeList"
                 [(value)]="currNode.options.body">
             </odp-node-data-selector>
         </div>
@@ -267,10 +276,13 @@
             </odp-add-headers>
         </div>
         <div *ngIf="currNode.options.contentType=='application/json'" class="form-group position-relative">
-            <label class="font-14 fw-400 text-dark" for="nodeBody">Body</label>
-            <textarea id="nodeBody" class="form-control dynamic-variable-addon" cols="30" rows="4"
-                [(ngModel)]="currNode.options.body"></textarea>
-            <odp-node-data-selector [edit]="edit" class="node-data-selector" [nodeList]="nodeList"
+            <label class="font-14 fw-400 text-dark d-flex align-items-center justify-content-between" for="nodeBody">
+                Body
+                <span class="dsi dsi-settings text-primary hover" (click)="toggle['body']=!toggle['body']"></span>
+            </label>
+            <!-- <textarea id="nodeBody" class="form-control dynamic-variable-addon" cols="30" rows="4"
+                [(ngModel)]="currNode.options.body"></textarea> -->
+            <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['body']" [nodeList]="nodeList"
                 [(value)]="currNode.options.body">
             </odp-node-data-selector>
         </div>
