--- a/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.scss
@@ -12,9 +12,23 @@
 
 .custom-window {
     top: 0px;
-    right: -90vw;
+    right: -560px;
     z-index: 3;
-    width: 90vw;
+    width: 560px;
+    height: 100vh;
+    overflow-y: auto;
+    transition: 0.2s;
+
+    &.show {
+        right: 0px;
+    }
+}
+
+.paste-window {
+    top: 0px;
+    right: -300px;
+    z-index: 3;
+    width: 300px;
     height: 100vh;
     overflow-y: auto;
     transition: 0.2s;
