--- a/src/app/home/b2b-flows-manage/path-properties/path-properties.component.html
+++ b/src/app/home/b2b-flows-manage/path-properties/path-properties.component.html
@@ -16,11 +16,37 @@
         <span>{{currNode?._id}}</span>
     </div> -->
 </div>
-<div class="p-4">
+<div class="">
+    <div class="form-group d-flex align-items-center justify-content-start p-3">
+        <div class="d-flex align-items-center justify-content-start mr-4">
+            <odp-round-radio [edit]="edit" [checked]="pathType=='success'"
+                (checkedChange)="onPathTypeChange($event,'success')">
+            </odp-round-radio>
+            <span class="ml-3">Success</span>
+        </div>
+        <div class="d-flex align-items-center justify-content-start">
+            <odp-round-radio [edit]="edit" [checked]="pathType=='error'"
+                (checkedChange)="onPathTypeChange($event,'error')">
+            </odp-round-radio>
+            <span class="ml-3">Error</span>
+        </div>
+    </div>
     <div class="form-group">
-        <label class="font-14 fw-400 text-dark" for="nodeName">Path Condition</label>
-        <input id="nodeName" type="text" class="form-control" [(ngModel)]="condition"
-            (ngModelChange)="changesDone.emit()">
+        <label class="font-14 fw-400 text-dark d-flex align-items-center justify-content-between p-3" for="nodeName">
+            <span>Path Condition</span>
+            <div class="d-flex align-items-center">
+                <span class="dsi dsi-settings text-primary hover"
+                    (click)="toggle['variable']=!toggle['variable']"></span>
+                <span class="ml-3 font-12 fw-400">Insert Variable</span>
+            </div>
+        </label>
+        <!-- <input id="nodeName" type="text" class="form-control" [(ngModel)]="condition"
+            (ngModelChange)="changesDone.emit()"> -->
+        <odp-node-data-selector *ngIf="toggle['variable']" [(toggle)]="toggle['variable']" [edit]="edit"
+            [nodeList]="nodeList" (valueChange)="onVariableSelect($event)">
+        </odp-node-data-selector>
+        <odp-code-editor [edit]="edit" [insertText]="insertText" [(code)]="condition"
+            (codeChange)="changesDone.emit()"></odp-code-editor>
     </div>
 </div>
 
