--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -15,7 +15,7 @@
                 </span>
                 <span *ngIf="!prevNode && node.type=='API'" class="d-flex align-items-center">
                     <span class="node-icon dsi dsi-api-reciever"></span>
-                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">API Reciever</span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">API Receiver</span>
                 </span>
                 <span *ngIf="prevNode && node.type=='API'" class="d-flex align-items-center">
                     <span class="node-icon dsi dsi-invoke-api"></span>
