--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.scss
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.scss
@@ -43,14 +43,21 @@ path {
 text {
     stroke-width: 0;
     fill: $dark;
-    font-size: 10px;
+    font-size: 12px;
 }
 
-text.node-name {
-    stroke-width: 0;
-    fill: $secondary;
-    font-size: 11px;
+text.path-text {
+    &.selected {
+        stroke-width: 0.75;
+        stroke: #000;
+    }
 }
+
+// text.node-name {
+//     stroke-width: 0;
+//     fill: $secondary;
+//     font-size: 11px;
+// }
 
 .active {
     .rect {
