--- a/src/app/home/b2b-flows-manage/path-properties/path-properties.component.html
+++ b/src/app/home/b2b-flows-manage/path-properties/path-properties.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="d-flex align-items-center justify-content-between px-4 py-2 mt-4">
-        <span class="font-20 fw-600">Path Condition</span>
+        <span class="font-20 fw-600">Path Properties</span>
         <div class="d-flex">
             <button type="button" class="btn btn-link" (click)="deletePath()">
                 <span class="dsi dsi-trash text-danger"></span>
