--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -64,14 +64,14 @@
                 </div>
             </div>
             <div class="list-group-item d-flex align-items-center justify-content-start hover"
-                *ngFor="let item of records;let i=index" (dblclick)="viewFlow(i)">
+                *ngFor="let item of records;let i=index" (dblclick)="viewFlow(item)">
                 <div class="item-name fw-500 d-flex align-items-center">
                     <span class="ml-2 pl-1 text-dark text-truncate" [ngbTooltip]="item.name"
                         placement="right">{{item.name}}</span>
                     <span class="ml-2 version sub-heading font-11 text-uppercase">(v{{(item.version||1)}})</span>
                     <span *ngIf="item.draftVersion" class="ml-2 draft sub-heading font-11 text-uppercase">(Draft)</span>
                 </div>
-                <div class="d-flex align-items-center" (dblclick)="viewFlow(i)">
+                <div class="d-flex align-items-center" (dblclick)="viewFlow(item)">
                     <div class="sub-heading item-status d-flex align-items-center">
                         <span class="text font-12 fw-400">{{item?.inputNode?.type}}</span>
                     </div>
@@ -113,7 +113,7 @@
                                     Edit
                                 </div>
                                 <div class="list-group-item list-group-item-action py-2 border-0"
-                                    *ngIf="canManageFlow(item._id)" (click)="viewFlow(i)">
+                                    *ngIf="canManageFlow(item._id)" (click)="viewFlow(item)">
                                     View
                                 </div>
                                 <div class="list-group-item list-group-item-action py-2 border-0"
