--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -43,19 +43,19 @@
         </foreignObject>
     </g>
     <g *ngFor="let p of successPaths;let i=index">
-        <path [attr.d]="p.path" class="svg-path svg-path-transparent ignore-outside"
-            [class.selected]="i == selectedPathIndex" (click)="selectPath($event,i,p)" />
-        <path [attr.d]="p.path" class="svg-path ignore-outside" [class.selected]="i == selectedPathIndex"
-            (click)="selectPath($event,i,p)" [style]="'stroke:#'+p.color" />
+        <path [attr.d]="p.path" class="svg-path svg-path-transparent ignore-outside" [class.selected]="isSelectedPath && selectedPathType=='success'"
+            (click)="selectPath($event,i,p,'success')" />
+        <path [attr.d]="p.path" class="svg-path ignore-outside" [class.selected]="isSelectedPath && selectedPathType=='success'"
+            (click)="selectPath($event,i,p,'success')" [style]="'stroke:#'+p.color" />
         <text x="0" y="0" class="path-text" [style]="getPathTextStyle(p)" text-anchor="middle"
-            [attr.data-id]="currNode._id" [class.selected]="selectedPathIndex == i">{{p.name}}</text>
+            [attr.data-id]="currNode._id" [class.selected]="isSelectedPath && selectedPathType=='success'">{{p.name}}</text>
     </g>
     <g *ngFor="let p of errorPaths;let i=index">
-        <path [attr.d]="p.path" class="svg-path svg-path-transparent ignore-outside"
-            [class.selected]="i == selectedPathIndex" (click)="selectPath($event,i,p)" />
-        <path [attr.d]="p.path" class="svg-path ignore-outside" [class.selected]="i == selectedPathIndex"
-            (click)="selectPath($event,i,p)" [style]="'stroke:#'+p.color" />
+        <path [attr.d]="p.path" class="svg-path svg-path-transparent ignore-outside" [class.selected]="isSelectedPath && selectedPathType=='error'"
+            (click)="selectPath($event,i,p,'error')" />
+        <path [attr.d]="p.path" class="svg-path ignore-outside" [class.selected]="isSelectedPath && selectedPathType=='error'"
+            (click)="selectPath($event,i,p,'error')" [style]="'stroke:#'+p.color" />
         <text x="0" y="0" class="path-text" [style]="getPathTextStyle(p)" text-anchor="middle"
-            [attr.data-id]="currNode._id" [class.selected]="selectedPathIndex == i">{{p.name}}</text>
+            [attr.data-id]="currNode._id" [class.selected]="isSelectedPath && selectedPathType=='error'">{{p.name}}</text>
     </g>
 </svg>
