--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -56,63 +56,72 @@
                         <span class="node-icon font-16 fw-400 dsi dsi-file mr-2"></span>
                         <span class="font-13 fw-400">File Agent</span>
                     </div>
-                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover" (click)="addNodeToCanvas('FILE')"></span>
+                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover"
+                        (click)="addNodeToCanvas('FILE')"></span>
                 </div>
                 <div class="node-item border-bottom py-2 d-flex align-items-center justify-content-between pr-2">
                     <div class="d-flex align-items-center">
                         <span class="node-icon font-16 fw-400 dsi dsi-invoke-api mr-2"></span>
                         <span class="font-13 fw-400">Invoke API</span>
                     </div>
-                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover" (click)="addNodeToCanvas('API')"></span>
+                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover"
+                        (click)="addNodeToCanvas('API')"></span>
                 </div>
                 <div class="node-item border-bottom py-2 d-flex align-items-center justify-content-between pr-2">
                     <div class="d-flex align-items-center">
                         <span class="node-icon font-16 fw-400 dsi dsi-connector mr-2"></span>
                         <span class="font-13 fw-400">Connector</span>
                     </div>
-                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover" (click)="addNodeToCanvas('CONNECTOR')"></span>
+                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover"
+                        (click)="addNodeToCanvas('CONNECTOR')"></span>
                 </div>
                 <div class="node-item border-bottom py-2 d-flex align-items-center justify-content-between pr-2">
                     <div class="d-flex align-items-center">
                         <span class="node-icon font-16 fw-400 dsi dsi-data-service mr-2"></span>
                         <span class="font-13 fw-400">Data Service</span>
                     </div>
-                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover" (click)="addNodeToCanvas('DATASERVICE')"></span>
+                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover"
+                        (click)="addNodeToCanvas('DATASERVICE')"></span>
                 </div>
                 <div class="node-item border-bottom py-2 d-flex align-items-center justify-content-between pr-2">
                     <div class="d-flex align-items-center">
                         <span class="node-icon font-16 fw-400 dsi dsi-function mr-2"></span>
                         <span class="font-13 fw-400">Function</span>
                     </div>
-                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover" (click)="addNodeToCanvas('FUNCTION')"></span>
+                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover"
+                        (click)="addNodeToCanvas('FUNCTION')"></span>
                 </div>
                 <div class="node-item border-bottom py-2 d-flex align-items-center justify-content-between pr-2">
                     <div class="d-flex align-items-center">
                         <span class="node-icon font-16 fw-400 dsi dsi-mapping mr-2"></span>
                         <span class="font-13 fw-400">Mapping</span>
                     </div>
-                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover" (click)="addNodeToCanvas('MAPPING')"></span>
+                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover"
+                        (click)="addNodeToCanvas('MAPPING')"></span>
                 </div>
                 <div class="node-item border-bottom py-2 d-flex align-items-center justify-content-between pr-2">
                     <div class="d-flex align-items-center">
                         <span class="node-icon font-16 fw-400 dsi dsi-object mr-2 text-muted"></span>
                         <span class="font-13 fw-400">Code Block</span>
                     </div>
-                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover" (click)="addNodeToCanvas('CODEBLOCK')"></span>
+                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover"
+                        (click)="addNodeToCanvas('CODEBLOCK')"></span>
                 </div>
                 <div class="node-item border-bottom py-2 d-flex align-items-center justify-content-between pr-2">
                     <div class="d-flex align-items-center">
                         <span class="node-icon font-16 fw-400 dsi dsi-expand mr-2"></span>
                         <span class="font-13 fw-400">Change Root</span>
                     </div>
-                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover" (click)="addNodeToCanvas('UNWIND')"></span>
+                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover"
+                        (click)="addNodeToCanvas('UNWIND')"></span>
                 </div>
                 <div class="node-item border-bottom py-2 d-flex align-items-center justify-content-between pr-2">
                     <div class="d-flex align-items-center">
                         <span class="node-icon font-16 fw-400 dsi dsi-response mr-2"></span>
                         <span class="font-13 fw-400">Response</span>
                     </div>
-                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover" (click)="addNodeToCanvas('RESPONSE')"></span>
+                    <span class="font-16 fw-400 dsi dsi-plus-circle text-primary hover"
+                        (click)="addNodeToCanvas('RESPONSE')"></span>
                 </div>
             </div>
             <div class="flow-designer-svg-wrapper">
@@ -124,13 +133,14 @@
             </div>
 
             <div [ngClass]="{'show':showNodeProperties || showPathProperties}"
-                class="node-properties border-left position-fixed bg-white">
-                <odp-node-properties *ngIf="showNodeProperties" [edit]="edit" [flowData]="flowData" [nodeList]="nodeList"
-                    [currNode]="selectedNode.currNode" (close)="showNodeProperties=false"
-                    (changesDone)="changesDone = true">
+                class="node-properties border-left border-top position-fixed bg-white">
+                <odp-node-properties *ngIf="showNodeProperties" [edit]="edit" [flowData]="flowData"
+                    [nodeList]="nodeList" [currNode]="selectedNode.currNode" (close)="showNodeProperties=false"
+                    (changesDone)="changesDone = true" odpClickOutside (outside)="closeProperties()">
                 </odp-node-properties>
-                <odp-path-properties *ngIf="showPathProperties" [edit]="edit" [flowData]="flowData" [nodeList]="nodeList"
-                    [path]="selectedPath" (close)="showPathProperties=false" (changesDone)="changesDone = true">
+                <odp-path-properties *ngIf="showPathProperties" [edit]="edit" [flowData]="flowData"
+                    [nodeList]="nodeList" [path]="selectedPath" (close)="showPathProperties=false"
+                    (changesDone)="changesDone = true" odpClickOutside (outside)="closeProperties()">
                 </odp-path-properties>
             </div>
         </div>
