--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -136,11 +136,11 @@
                 class="node-properties border-left border-top position-fixed bg-white">
                 <odp-node-properties *ngIf="showNodeProperties" [edit]="edit" [flowData]="flowData"
                     [nodeList]="nodeList" [currNode]="selectedNode.currNode" (close)="showNodeProperties=false"
-                    (changesDone)="changesDone = true" odpClickOutside (outside)="closeProperties()">
+                    (changesDone)="changesDone = true">
                 </odp-node-properties>
                 <odp-path-properties *ngIf="showPathProperties" [edit]="edit" [flowData]="flowData"
                     [nodeList]="nodeList" [path]="selectedPath" (close)="showPathProperties=false"
-                    (changesDone)="changesDone = true" odpClickOutside (outside)="closeProperties()">
+                    (changesDone)="changesDone = true">
                 </odp-path-properties>
             </div>
         </div>
